--- a/src/components/MainLayout/MainLayout.css
+++ b/src/components/MainLayout/MainLayout.css
@@ -57,7 +57,7 @@
 }
 .nav-link i {
   font-size: 1.2rem;
-  width: 24px; /* Fixed width for icon alignment */
+  width: 24px; 
   text-align: center;
 }
 .nav-link:hover {
